--- a/DimseLibrary/MainPage.xaml
+++ b/DimseLibrary/MainPage.xaml
@@ -9,6 +9,9 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <TextBlock x:Name="Dims1TextBox" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401"/>
+        <TextBlock x:Name="Dims2TextBox" HorizontalAlignment="Left" Margin="10,60,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401"/>
+        <TextBlock x:Name="Dims3TextBox" HorizontalAlignment="Left" Margin="10,110,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401"/>
+        <Button x:Name="LoanButton" Content="Button" HorizontalAlignment="Left" Margin="256,165,0,0" VerticalAlignment="Top" Height="53" Width="155"/>
     </Grid>
 </Page>
