--- a/DimseLibrary/MainPage.xaml
+++ b/DimseLibrary/MainPage.xaml
@@ -12,9 +12,20 @@
         <local:ViewModel></local:ViewModel>
     </Page.DataContext>
     <Grid>
-        <TextBlock x:Name="Dims1TextBox" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401"/>
+        <StackPanel Orientation="Vertical">
+     <!--   <TextBlock x:Name="Dims1TextBox" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401" FontSize="24"/>
         <TextBlock x:Name="Dims2TextBox" HorizontalAlignment="Left" Margin="10,60,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401"/>
         <TextBlock x:Name="Dims3TextBox" HorizontalAlignment="Left" Margin="10,110,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="50" Width="401"/>
+-->
         <Button x:Name="LoanButton" Content="Button" HorizontalAlignment="Left" Margin="256,165,0,0" VerticalAlignment="Top" Height="53" Width="155"/>
-    </Grid>
+        <ListView ItemsSource="{Binding Dimser}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name }"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        </StackPanel>
+
+</Grid>
 </Page>
